# emu2mqtt

./: .gitignore  Dockerfile  README.md  config.go  config_test.go  emu2mqtt.py  go.mod  go.sum  main.go  mqtt.go  pyproject.toml  serial.go  serial_test.go
.github/workflows/: build_test.yaml  ci.yaml  release.yaml
cmd/emu2mqtt/: main.go
emu2mqtt/: base.py
pkg/config/: config.go  config_test.go
pkg/mqtt/: mqtt.go
pkg/serial/: serial.go  serial_test.go
tests/: test_base.py
